opa/1opa-deployments-constraints.yaml
# constraints/require-deployment-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDeploymentResources
metadata:
  name: enforce-deployment-resources
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces:
      - app1
      - app2
      - app3
      - app4
      - app5
