opa/2opa-hpa-constraints-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8shpamusthaveresources
spec:
  crd:
    spec:
      names:
        kind: K8sHpaMustHaveResources
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8shpamusthaveresources

        violation[{"msg": msg}] {
          input.review.kind.kind == "HorizontalPodAutoscaler"

          not input.review.object.spec.minReplicas
          msg := "El HPA debe tener 'minReplicas' definido"
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "HorizontalPodAutoscaler"

          not input.review.object.spec.maxReplicas
          msg := "El HPA debe tener 'maxReplicas' definido"
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "HorizontalPodAutoscaler"

          count([m | m := input.review.object.spec.metrics[_]; m.resource.name == "cpu"]) == 0
          msg := "El HPA debe tener una métrica de CPU configurada"
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "HorizontalPodAutoscaler"

          some i
          metric := input.review.object.spec.metrics[i]
          metric.resource.name == "cpu"
          not metric.resource.target.averageUtilization
          msg := "La métrica de CPU en el HPA debe tener 'averageUtilization' definido"
        }
