opa/2opa-hpa-constraints.yaml
# constraints/require-deployment-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHpaMustHaveResources
metadata:
  name: enforce-hpa-resources
spec:
  match:
    kinds:
      - apiGroups: ["autoscaling"]
        kinds: ["HorizontalPodAutoscaler"]
    namespaces:
      - app1
      - app2
      - app3
      - app4
      - app5
