opa/5opa-network-constraints-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8shostnetworkblock
spec:
  crd:
    spec:
      names:
        kind: K8sHostNetworkBlock
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8shostnetworkblock

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          input.review.object.spec.hostNetwork == true
          msg := "Se prohíbe usar 'hostNetwork: true' por motivos de seguridad"
        }
