opa/5opa-network-constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHostNetworkBlock
metadata:
  name: enforce-hostnetwork-resources
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - app1
      - app2
      - app3
      - app4
      - app5
